# Multiplanar-Reconstruction

./: CMakeLists.txt  README.md  SubDirectory.cmake  main.cpp
Core/: CMakeLists.txt  mpr.cpp  mpr.h  vtkvmtkCurvedMPRImageFilter2.cpp  vtkvmtkCurvedMPRImageFilter2.h
Data/: centerline.vtp
